[package]
name = "cjemu"
version = "0.1.0"
edition = "2018"

[dependencies]
# Execution environment
cjemu-runtime = { path = "./cjemu-runtime" }

# Getting directories like the home directory
directories = "3.0.2"

# GUI library
fltk = { git = "https://github.com/fltk-rs/fltk-rs", features = ["fltk-bundled"] }
